add filter to comments

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
             </span>
           </h3>
         </div>
-        <div ng-repeat="comment in post.comments">
+        <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
           <span class="glyphicon glyphicon-thumbs-up"
             ng-click="incrementUpvotes(comment)"></span>
           {{comment.upvotes}} - by {{comment.author}}
