--- a/index.html
+++ b/index.html
@@ -5,6 +5,9 @@
     <script src="http://ajax.googleapis.com/ajax/libs/angularjs/1.3.10/angular.min.js"></script>
     <script src="http://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
     <script src="app.js"></script>
+    <head>
+<link rel="stylesheet" type="text/css" href="app.css">
+</head>
     <style> .glyphicon-thumbs-up { cursor:pointer } </style>
   </head>
   <body ng-app="flapperNews">
@@ -15,51 +18,86 @@
     </div>
 
     <script type="text/ng-template" id="/home.html">
+    <div class="hero" ng-style="image">
       <div class="page-header">
         <h1>Flapper News</h1>
       </div>
-      <div ng-repeat="post in posts | orderBy:'-upvotes'">
-        <span class="glyphicon glyphicon-thumbs-up"
-          ng-click="incrementUpvotes(post)"></span>
-        {{post.upvotes}}
-        <span style="font-size:20px; margin-left:10px;">
-          <a ng-show="post.link" href="{{post.link}}">
-            {{post.title}}
-          </a>
-          <span ng-hide="post.link">
-            {{post.title}}
-          </span>
-        </span>
-        <span>
-          <a href="#/posts/{{$index}}">Comments</a>
-        </span>
-        <span>
-          <a ng-click='deletepost(post)'>Delete</a>
-        </span>
+      <input type='checkbox' ng-model="votes" style="color: white"><span>Most votes/comments</span>
+      <br>
+      <br>
+      <div>
+        <div ng-show="votes">
+          <span>Most votes:</span>
+          <div ng-repeat="post in posts | orderBy:'-upvotes'">
+            <span class="glyphicon glyphicon-thumbs-up"
+              ng-click="incrementUpvotes(post)"></span>
+            <span> {{post.upvotes}} </span>
+            <span style="font-size:20px; margin-left:10px;">
+              <a ng-show="post.link" href="{{post.link}}">
+                {{post.title}}
+              </a>
+              <span ng-hide="post.link">
+                {{post.title}}
+              </span>
+            </span>
+            <span>
+              <a href="#/posts/{{$index}}">Comments</a>
+            </span>
+            <span>
+              <a ng-click='deletepost(post)'>Delete</a>
+            </span>
+          </div>
+        </div>
       </div>
-      <div ng-repeat="post in posts | 'mostComments'">
-        <span class="glyphicon glyphicon-thumbs-up"
-          ng-click="incrementUpvotes(post)"></span>
-        {{post.upvotes}}
-        <span style="font-size:20px; margin-left:10px;">
-          <a ng-show="post.link" href="{{post.link}}">
-            {{post.title}}
-          </a>
-          <span ng-hide="post.link">
-            {{post.title}}
-          </span>
-        </span>
-        <span>
-          <a href="#/posts/{{$index}}">Comments</a>
-        </span>
-        <span>
-          <a ng-click='deletepost(post)'>Delete</a>
-        </span>
+      <div>
+        <div ng-hide='votes'>
+          <span>Most comments:</span>
+          <div ng-repeat="post in posts | orderBy:'-comments.length'">
+            <span class="glyphicon glyphicon-thumbs-up"
+              ng-click="incrementUpvotes(post)"></span>
+            <span> {{post.upvotes}} </span>
+            <span style="font-size:20px; margin-left:10px;">
+              <a ng-show="post.link" href="{{post.link}}">
+                {{post.title}}
+              </a>
+              <span ng-hide="post.link">
+                {{post.title}}
+              </span>
+            </span>
+            <span>
+              <a href="#/posts/{{$index}}">Comments</a>
+            </span>
+            <span>
+              <a ng-click='deletepost(post)'>Delete</a>
+            </span>
+          </div>
+        </div>
       </div>
+
+
+      // <div ng-repeat="post in posts | 'mostComments'">
+      //   <span class="glyphicon glyphicon-thumbs-up"
+      //     ng-click="incrementUpvotes(post)"></span>
+      //   {{post.upvotes}}
+      //   <span style="font-size:20px; margin-left:10px;">
+      //     <a ng-show="post.link" href="{{post.link}}">
+      //       {{post.title}}
+      //     </a>
+      //     <span ng-hide="post.link">
+      //       {{post.title}}
+      //     </span>
+      //   </span>
+      //   <span>
+      //     <a href="#/posts/{{$index}}">Comments</a>
+      //   </span>
+      //   <span>
+      //     <a ng-click='deletepost(post)'>Delete</a>
+      //   </span>
+      // </div>
 
       <form ng-submit="addPost()"
         style="margin-top:30px;">
-        <h3>Add a new post</h3>
+        <h1>Add a new post</h1>
 
         <div class="form-group">
           <input type="text"
@@ -76,8 +114,11 @@
 
         <button type="submit" class="btn btn-primary">Post</button>
       </form>
+      </div>
     </script>
+
       <script type="text/ng-template" id="/posts.html">
+      <div class="hero" ng-style='image'>
         <div class="page-header">
           <h3>
             <a ng-show="post.link" href="{{post.link}}">
@@ -91,7 +132,9 @@
         <div ng-repeat="comment in post.comments | orderBy:'-upvotes'">
           <span class="glyphicon glyphicon-thumbs-up"
             ng-click="incrementUpvotes(comment)"></span>
+            <span>
           {{comment.upvotes}} - by {{comment.author}}
+          </span>
           <span style="font-size:20px; margin-left:10px;">
             {{comment.body}}
           </span>
@@ -110,6 +153,7 @@
         <button type="submit" class="btn btn-primary">Post</button>
       </form>
       <a href="#/home">Home</a>
+      </div>
     </script>
   </body>
 </html>
